# predictme

./: .gitignore  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg
R/: install_R_libraries.R
app/: __init__.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
data/: Asif_Genotype_Disease_Only_ROSMAP.csv  GLM_model_R  adpd_autoencoder_matrix.RData  adpd_autoencoder_model_store.RData  adpd_snp_mat.RData  adpd_subgraph15_snp_mat_148.RData  autoencoder_trained_matrix.RData  rosmap148.snp.mat.RData  subgraph15_snpset148.RData  subgraphs15_snps_mod1.csv  trained_patient_clusters.RData  user_autoencoder_matrix.RData
data/models/: mygrid_16884_model_3  mygrid_18461_model_3  mygrid_19294_model_7  mygrid_19334_model_1  mygrid_1956_model_3  mygrid_21068_model_1  mygrid_22115_model_24  mygrid_35541_model_4  mygrid_43910_model_3  mygrid_49327_model_17  mygrid_50150_model_4  mygrid_54409_model_24  mygrid_model_01  mygrid_model_06  mygrid_model_08
notebooks/: r2py.ipynb
predictme/: __init__.py  __main__.py  admin.py  apps.py  cli.py  forms.py  views.py
predictme/management/commands/: load_db.py
predictme/src/predictme/: R.py  constants.py  data_preprocessing.py  load_db.py  models.py  utils.py
predictme/static/predictme/css/: home.css
predictme/templatetags/: filters.py
templates/: about.html  footer.html  home.html  legal.html  nav.html  results.html
templates/dependencies/: bootstrap_dependencies.html  common.html  jquery.html
