##########################
# Setup.py Configuration #
##########################
[metadata]
name =  predictme
version = 0.0.1-dev
description = PredictMe
long_description = file: README.md

# URLs associated with the project
url = https://github.com/ddomingof/predictme
download_url = https://github.com/ddomingof/predictme
project_urls =
    Bug Tracker = https://github.com/ddomingof/predictme/issues
    Source Code = https://github.com/ddomingof/predictme
    Documentation = https://github.com/ddomingof/predictme

# Author information
author = Daniel Domingo-Fernández
author_email = danieldomingofernandez@hotmail.com
maintainer = Daniel Domingo-Fernández
maintainer_email = danieldomingofernandez@hotmail.com

# License Information
license = Apache License 2.0
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    numpy==1.16.3
    tqdm==4.31.1
    pandas==0.24.2
    django==2.2.24
    xlrd==1.2.0
    click==7.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

package s= find:
package_dir =
    = predictme/src

[options.packages.find]
where = src